--- a/css/index.css
+++ b/css/index.css
@@ -67,6 +67,11 @@ section .imagenes .pieza-div img {
   width: 100%;
   border: solid #ffc402 2px;
 }
+section .imagenes .pieza-div .correct {
+  -webkit-filter: grayscale(100%);
+  /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
+}
 
 .hidden {
   display: none;
