--- a/css/index.scss
+++ b/css/index.scss
@@ -67,6 +67,10 @@ section{
                 width: 100%;
                 border: solid rgb(255, 196, 2) 2px;
             }
+            .correct{
+                -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+                filter: grayscale(100%);
+            }
         }
     }    
 }
