--- a/css/index.css
+++ b/css/index.css
@@ -6,11 +6,12 @@ body {
 h1 {
   font-family: "pacifico", cursive;
   text-align: center;
-  color: #8ad1e9;
+  color: #41bbe4;
 }
 
 .welcomeForm {
   margin: auto;
+  margin-top: 50px;
   display: flex;
   flex-direction: column;
   width: 400px;
@@ -18,6 +19,10 @@ h1 {
   background-color: bisque;
   border: solid black 10px;
   border-radius: 10px;
+}
+.welcomeForm input {
+  margin: 2px 10px 2px 10px;
+  border-color: fuchsia;
 }
 .welcomeForm .saludo {
   text-align: center;
@@ -28,18 +33,38 @@ h1 {
   font-family: "mali", cursive;
 }
 
+.hide {
+  display: none;
+}
+
+.botones {
+  margin: 2px 10px 2px 10px;
+}
 .botones .levels {
   background-color: #ffc402;
   color: white;
-  font-size: 20px;
+  font-size: 19px;
   border-radius: 5px;
   width: 100%;
+  height: 30px;
   font-family: "mali", cursive;
 }
 
-#ups {
+.ups {
   color: red;
   font-family: "mali", cursive;
+}
+
+.memo {
+  font-family: "pacifico", cursive;
+  text-align: center;
+  color: #41bbe4;
+  font-size: 30px;
+}
+
+.dificultnum {
+  color: #41bbe4;
+  font-weight: bold;
 }
 
 section {
@@ -47,10 +72,13 @@ section {
   width: 1000px;
   height: 900px;
   margin-top: 20px;
+  margin-bottom: 20px;
   border: solid black 10px;
   border-radius: 8px;
-  background-color: rgba(255, 228, 196, 0.685);
+  background-color: rgba(255, 228, 196, 0.575);
   text-align: center;
+  font-family: "mali", cursive;
+  font-size: medium;
 }
 section .imagenes {
   display: flex;
@@ -69,12 +97,13 @@ section .imagenes .pieza-div img {
 }
 section .imagenes .pieza-div .correct {
   -webkit-filter: grayscale(100%);
-  /* Safari 6.0 - 9.0 */
   filter: grayscale(100%);
 }
 
-.hidden {
-  display: none;
+.intentos {
+  border: solid #41bbe4 4px;
+  width: 900px;
+  margin: auto;
 }
 
 /*# sourceMappingURL=index.css.map */
