Arreglos de estilos

--- a/css/index.scss
+++ b/css/index.scss
@@ -71,8 +71,8 @@ h1{
 }
 section{
     margin: auto;
-    width: 1000px;
-    height: 900px;
+    width: 1050px;
+    height: 950px;
     margin-top: 20px;
     margin-bottom: 20px;
     border: solid black 10px;
@@ -108,5 +108,6 @@ section{
     border: solid rgb(65, 187, 228) 4px;
     width: 900px;
     margin: auto;
+    background-color: rgba(245, 245, 220, 0.658);
    
 }
