--- a/css/index.css
+++ b/css/index.css
@@ -69,8 +69,8 @@ h1 {
 
 section {
   margin: auto;
-  width: 1000px;
-  height: 900px;
+  width: 1050px;
+  height: 950px;
   margin-top: 20px;
   margin-bottom: 20px;
   border: solid black 10px;
@@ -104,6 +104,7 @@ section .imagenes .pieza-div .correct {
   border: solid #41bbe4 4px;
   width: 900px;
   margin: auto;
+  background-color: rgba(245, 245, 220, 0.658);
 }
 
 /*# sourceMappingURL=index.css.map */
